--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [General]
-; current options are pomf and s3
+; current options are pomf and s3 (for now only digitalocean)
 backend_host=
 
 [Reddit]
